--- a/kaf/App.config
+++ b/kaf/App.config
@@ -1,6 +1,29 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+<!--   <connectionStrings>
+    <add name="pubDB"
+         providerName="System.Data.SqlClient"
+         connectionString="Data Source=KORISNIK-PC\SQLEXPRESS;Initial Catalog=kaf.dal.PubContext;Integrated Security=True"/>
+  </connectionStrings>
+  -->
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="Data Source=KORISNIK-PC\SQLEXPRESS;Initial Catalog=pub; MultipleActiveResultSets=True; Integrated Security=True; Persist Security Info = True" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
+  <connectionStrings>
+    <add name="pubFullEntities" connectionString="metadata=res://*/dbFirst.pubModel.csdl|res://*/dbFirst.pubModel.ssdl|res://*/dbFirst.pubModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KORISNIK-PC\sqlexpress;initial catalog=pubFull;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
